@@ -3,7 +3,7 @@
 description = Classical PSHA using Area Source
 calculation_mode = classical
 concurrent_tasks = 4
-num_tiles = 3
+sites_per_tile = 1
 random_seed = 23
 
 [geometry]
